fix contact form spacing

--- a/resources/css/combined.css
+++ b/resources/css/combined.css
@@ -588,6 +588,7 @@ select {
 =============================================*/
 #contact-form input{
   display:block;
+  margin-bottom:10px;
 }
 
 #order-history{
